# zenoutl

./: .clang-format  CMakeLists.txt
module/: CMakeLists.txt
module/stropr/: CMakeLists.txt
module/stropr/include/: argparser.h  str_operation.h
module/stropr/src/: argparser.cpp  str_operation.cpp
sample/: CMakeLists.txt  sample_split.cpp
